--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -73,7 +73,110 @@
     "id": "z1EySlOXwwoa",
     "outputId": "43e57a90-fdde-420b-de82-725d61f33352"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch>=1.4.0 in /venv/main/lib/python3.10/site-packages (from -r requirements.txt (line 1)) (2.5.1+cu121)\n",
+      "Requirement already satisfied: torchvision>=0.5.0 in /venv/main/lib/python3.10/site-packages (from -r requirements.txt (line 2)) (0.20.1+cu121)\n",
+      "Collecting dominate>=2.4.0\n",
+      "  Downloading dominate-2.9.1-py2.py3-none-any.whl (29 kB)\n",
+      "Collecting visdom>=0.1.8.8\n",
+      "  Downloading visdom-0.2.4.tar.gz (1.4 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting wandb\n",
+      "  Downloading wandb-0.19.7-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (20.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.8/20.8 MB\u001b[0m \u001b[31m40.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting kagglehub\n",
+      "  Downloading kagglehub-0.3.9-py3-none-any.whl (62 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 KB\u001b[0m \u001b[31m19.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: fsspec in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (2025.2.0)\n",
+      "Requirement already satisfied: nvidia-cudnn-cu12==9.1.0.70 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (9.1.0.70)\n",
+      "Requirement already satisfied: nvidia-cufft-cu12==11.0.2.54 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (11.0.2.54)\n",
+      "Requirement already satisfied: nvidia-nccl-cu12==2.21.5 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (2.21.5)\n",
+      "Requirement already satisfied: filelock in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (3.17.0)\n",
+      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.1.105 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-curand-cu12==10.3.2.106 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (10.3.2.106)\n",
+      "Requirement already satisfied: nvidia-cusolver-cu12==11.4.5.107 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (11.4.5.107)\n",
+      "Requirement already satisfied: networkx in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (3.3)\n",
+      "Requirement already satisfied: triton==3.1.0 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (3.1.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (1.13.1)\n",
+      "Requirement already satisfied: nvidia-nvtx-cu12==12.1.105 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-cusparse-cu12==12.1.0.106 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (12.1.0.106)\n",
+      "Requirement already satisfied: nvidia-cublas-cu12==12.1.3.1 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (12.1.3.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (4.12.2)\n",
+      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.1.105 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (12.1.105)\n",
+      "Requirement already satisfied: jinja2 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (3.1.4)\n",
+      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.1.105 in /venv/main/lib/python3.10/site-packages (from torch>=1.4.0->-r requirements.txt (line 1)) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-nvjitlink-cu12 in /venv/main/lib/python3.10/site-packages (from nvidia-cusolver-cu12==11.4.5.107->torch>=1.4.0->-r requirements.txt (line 1)) (12.1.105)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /venv/main/lib/python3.10/site-packages (from sympy==1.13.1->torch>=1.4.0->-r requirements.txt (line 1)) (1.3.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /venv/main/lib/python3.10/site-packages (from torchvision>=0.5.0->-r requirements.txt (line 2)) (11.0.0)\n",
+      "Requirement already satisfied: numpy in /venv/main/lib/python3.10/site-packages (from torchvision>=0.5.0->-r requirements.txt (line 2)) (2.1.2)\n",
+      "Collecting jsonpatch\n",
+      "  Downloading jsonpatch-1.33-py2.py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: requests in /venv/main/lib/python3.10/site-packages (from visdom>=0.1.8.8->-r requirements.txt (line 4)) (2.32.3)\n",
+      "Collecting scipy\n",
+      "  Downloading scipy-1.15.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (37.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m37.6/37.6 MB\u001b[0m \u001b[31m40.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: six in /venv/main/lib/python3.10/site-packages (from visdom>=0.1.8.8->-r requirements.txt (line 4)) (1.17.0)\n",
+      "Requirement already satisfied: tornado in /venv/main/lib/python3.10/site-packages (from visdom>=0.1.8.8->-r requirements.txt (line 4)) (6.4.2)\n",
+      "Collecting websocket-client\n",
+      "  Downloading websocket_client-1.8.0-py3-none-any.whl (58 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.8/58.8 KB\u001b[0m \u001b[31m14.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting sentry-sdk>=2.0.0\n",
+      "  Downloading sentry_sdk-2.22.0-py2.py3-none-any.whl (325 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.8/325.8 KB\u001b[0m \u001b[31m61.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: platformdirs in /venv/main/lib/python3.10/site-packages (from wandb->-r requirements.txt (line 5)) (4.3.6)\n",
+      "Collecting pydantic<3,>=2.6\n",
+      "  Downloading pydantic-2.10.6-py3-none-any.whl (431 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m431.7/431.7 KB\u001b[0m \u001b[31m74.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting setproctitle\n",
+      "  Downloading setproctitle-1.3.5-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (30 kB)\n",
+      "Requirement already satisfied: pyyaml in /venv/main/lib/python3.10/site-packages (from wandb->-r requirements.txt (line 5)) (6.0.2)\n",
+      "Collecting protobuf!=4.21.0,!=5.28.0,<6,>=3.19.0\n",
+      "  Downloading protobuf-5.29.3-cp38-abi3-manylinux2014_x86_64.whl (319 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m319.7/319.7 KB\u001b[0m \u001b[31m53.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting click!=8.0.0,>=7.1\n",
+      "  Downloading click-8.1.8-py3-none-any.whl (98 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.2/98.2 KB\u001b[0m \u001b[31m31.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: setuptools in /venv/main/lib/python3.10/site-packages (from wandb->-r requirements.txt (line 5)) (59.6.0)\n",
+      "Requirement already satisfied: psutil>=5.0.0 in /venv/main/lib/python3.10/site-packages (from wandb->-r requirements.txt (line 5)) (6.1.1)\n",
+      "Collecting gitpython!=3.1.29,>=1.0.0\n",
+      "  Downloading GitPython-3.1.44-py3-none-any.whl (207 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.6/207.6 KB\u001b[0m \u001b[31m51.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting docker-pycreds>=0.4.0\n",
+      "  Downloading docker_pycreds-0.4.0-py2.py3-none-any.whl (9.0 kB)\n",
+      "Requirement already satisfied: packaging in /venv/main/lib/python3.10/site-packages (from kagglehub->-r requirements.txt (line 6)) (24.2)\n",
+      "Requirement already satisfied: tqdm in /venv/main/lib/python3.10/site-packages (from kagglehub->-r requirements.txt (line 6)) (4.67.1)\n",
+      "Collecting gitdb<5,>=4.0.1\n",
+      "  Downloading gitdb-4.0.12-py3-none-any.whl (62 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.8/62.8 KB\u001b[0m \u001b[31m22.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting pydantic-core==2.27.2\n",
+      "  Downloading pydantic_core-2.27.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m61.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting annotated-types>=0.6.0\n",
+      "  Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /venv/main/lib/python3.10/site-packages (from requests->visdom>=0.1.8.8->-r requirements.txt (line 4)) (3.4.1)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /venv/main/lib/python3.10/site-packages (from requests->visdom>=0.1.8.8->-r requirements.txt (line 4)) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /venv/main/lib/python3.10/site-packages (from requests->visdom>=0.1.8.8->-r requirements.txt (line 4)) (2025.1.31)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /venv/main/lib/python3.10/site-packages (from requests->visdom>=0.1.8.8->-r requirements.txt (line 4)) (3.10)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /venv/main/lib/python3.10/site-packages (from jinja2->torch>=1.4.0->-r requirements.txt (line 1)) (2.1.5)\n",
+      "Collecting jsonpointer>=1.9\n",
+      "  Downloading jsonpointer-3.0.0-py2.py3-none-any.whl (7.6 kB)\n",
+      "Collecting smmap<6,>=3.0.1\n",
+      "  Downloading smmap-5.0.2-py3-none-any.whl (24 kB)\n",
+      "Building wheels for collected packages: visdom\n",
+      "  Building wheel for visdom (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for visdom: filename=visdom-0.2.4-py3-none-any.whl size=1408215 sha256=76cfe72c80be3a9ba79be1e9fad0ea7a0be001a3ddcbcff089f1c66e0a1f979e\n",
+      "  Stored in directory: /root/.cache/pip/wheels/42/29/49/5bed207bac4578e4d2c0c5fc0226bfd33a7e2953ea56356855\n",
+      "Successfully built visdom\n",
+      "Installing collected packages: websocket-client, smmap, setproctitle, sentry-sdk, scipy, pydantic-core, protobuf, jsonpointer, dominate, docker-pycreds, click, annotated-types, pydantic, kagglehub, jsonpatch, gitdb, visdom, gitpython, wandb\n",
+      "Successfully installed annotated-types-0.7.0 click-8.1.8 docker-pycreds-0.4.0 dominate-2.9.1 gitdb-4.0.12 gitpython-3.1.44 jsonpatch-1.33 jsonpointer-3.0.0 kagglehub-0.3.9 protobuf-5.29.3 pydantic-2.10.6 pydantic-core-2.27.2 scipy-1.15.2 sentry-sdk-2.22.0 setproctitle-1.3.5 smmap-5.0.2 visdom-0.2.4 wandb-0.19.7 websocket-client-1.8.0\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -r requirements.txt"
    ]
@@ -122,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -136,6 +239,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rm: cannot remove 'trainB': No such file or directory\n",
+      "rm: cannot remove 'trainA': No such file or directory\n",
       "Archive:  ./trainB_pt_16_128.zip\n",
       "   creating: ./trainB_pt_16_128/\n",
       "  inflating: ./trainB_pt_16_128/1.jpeg.pt  \n",
@@ -12504,7 +12609,7 @@
     "import glob\n",
     "import os\n",
     "\n",
-    "!cd /root/CycleGAN-VAE-NST\n",
+    "!cd /workspace/CycleGAN-VAE-NST\n",
     "!rm -r trainB\n",
     "!rm -r trainA\n",
     "!unzip -d ./ -o ./trainB_pt_16_128.zip\n",
@@ -12513,7 +12618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "id": "CoZmcTXgwHg3"
    },
@@ -12529,11 +12634,11 @@
    ],
    "source": [
     "import os\n",
-    "!cd /root/CycleGAN-VAE-NST\n",
+    "!cd /workspace/CycleGAN-VAE-NST\n",
     "!rm -r ./datasets/trainA\n",
     "!cp -r ./trainA_pt_16_128/ ./datasets/trainA\n",
     "import random\n",
-    "path='/root/CycleGAN-VAE-NST/datasets/trainA'\n",
+    "path='/workspace/CycleGAN-VAE-NST/datasets/trainA'\n",
     "if os.path.exists(path):\n",
     "  images = [f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))]\n",
     "  random.shuffle(images)\n",
@@ -12547,21 +12652,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n",
+      "3000\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import shutil\n",
-    "pathsrc='/root/CycleGAN-VAE-NST/trainA_pt_16_128'\n",
-    "pathexst='/root/CycleGAN-VAE-NST/datasets/trainA'\n",
-    "pathdst='/root/CycleGAN-VAE-NST/datasets/testA'\n",
+    "pathsrc='/workspace/CycleGAN-VAE-NST/trainA_pt_16_128'\n",
+    "pathexst='/workspace/CycleGAN-VAE-NST/datasets/trainA'\n",
+    "pathdst='/workspace/CycleGAN-VAE-NST/datasets/testA'\n",
     "if os.path.exists(pathsrc):\n",
     "  images = [f for f in os.listdir(pathsrc) if os.path.isfile(os.path.join(pathsrc, f))]\n",
     "  exstimg= [f for f in os.listdir(pathexst) if os.path.isfile(os.path.join(pathexst, f))]\n",
     "  print(len(images))\n",
     "  print(len(exstimg))\n",
-    "  destimg= random.shuffle([f for f in images if f not in exstimg][:500])\n",
+    "  destimg= [f for f in images if f not in exstimg][:500]\n",
+    "  if not os.path.exists(pathdst):\n",
+    "    os.mkdir(pathdst)\n",
     "  for image in destimg:\n",
     "    shutil.copy(os.path.join(pathsrc, image), os.path.join(pathdst, image))\n"
    ]
@@ -12611,7 +12727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -12971,7 +13087,7 @@
     }
    ],
    "source": [
-    "os.chdir('/root/CycleGAN-VAE-NST/')\n",
+    "os.chdir('/workspace/CycleGAN-VAE-NST/')\n",
     "!python train.py --dataroot ./datasets --name portraits2op --lambda_identity 0 --latent_dim 20 --ngf 32 --ndf 32 --norm batch --netG resnet_6blocks --lambda_B 8.0 --dataset_mode tensor --crop_size 128 --batch_size 1 --verbose --n_epochs 20 --n_epochs_decay 10 --display_id -1"
    ]
   },
@@ -13055,9 +13171,9 @@
    "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-3:m74"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3 (main venv)",
    "language": "python",
-   "name": "python3"
+   "name": "main"
   },
   "language_info": {
    "codemirror_mode": {
