--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -12605,20 +12605,16 @@
     }
    ],
    "source": [
-    "import zipfile\n",
-    "import glob\n",
-    "import os\n",
-    "\n",
     "!cd /workspace/CycleGAN-VAE-NST\n",
     "!rm -r trainB\n",
     "!rm -r trainA\n",
-    "!unzip -d ./ -o ./trainB_pt_16_128.zip\n",
-    "!unzip -d ./ -o ./trainA_pt_16_128.zip\n"
+    "!unzip -d ./ -o ../trainB_pt_16_128.zip\n",
+    "!unzip -d ./ -o ../trainA_pt_16_128.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "CoZmcTXgwHg3"
    },
@@ -12642,7 +12638,7 @@
     "if os.path.exists(path):\n",
     "  images = [f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))]\n",
     "  random.shuffle(images)\n",
-    "  images = images[:3000]\n",
+    "  images = images[9900:]\n",
     "  for image in [f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))]:\n",
     "    if image not in images:\n",
     "        os.remove(os.path.join(path, image))\n",
