updates for executions

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -189,14 +189,10 @@
    "source": [
     "# Datasets\n",
     "\n",
-    "Download one of the official datasets with:\n",
-    "\n",
-    "-   `bash ./datasets/download_cyclegan_dataset.sh [apple2orange, summer2winter_yosemite, horse2zebra, monet2photo, cezanne2photo, ukiyoe2photo, vangogh2photo, maps, cityscapes, facades, iphone2dslr_flower, ae_photos]`\n",
-    "\n",
-    "Or use your own dataset by creating the appropriate folders and adding in the images.\n",
+    "Use your own dataset by creating the appropriate folders and adding in the images.\n",
     "\n",
     "-   Create a dataset folder under `/dataset` for your dataset.\n",
-    "-   Create subfolders `testA`, `testB`, `trainA`, and `trainB` under your dataset's folder. Place any images you want to transform from a to b (cat2dog) in the `testA` folder, images you want to transform from b to a (dog2cat) in the `testB` folder, and do the same for the `trainA` and `trainB` folders."
+    "-   Create subfolders `testA`, `testB`, `trainA`, and `trainB` under your dataset's folder. For our experiment, we're going to extract the tensors of the images from zip files."
    ]
   },
   {
@@ -12608,8 +12604,8 @@
     "!cd /workspace/CycleGAN-VAE-NST\n",
     "!rm -r trainB\n",
     "!rm -r trainA\n",
-    "!unzip -d ./ -o ../trainB_pt_16_128.zip\n",
-    "!unzip -d ./ -o ../trainA_pt_16_128.zip"
+    "!unzip -d ./ -o ../onepiece_pt.zip\n",
+    "!unzip -d ./ -o ../img_align_celeba_pt.zip"
    ]
   },
   {
@@ -12630,52 +12626,31 @@
    ],
    "source": [
     "import os\n",
+    "import random\n",
+    "def move_files(src, dst, num_files):\n",
+    "  if os.path.exists(src):\n",
+    "    images = [f for f in os.listdir(src) if os.path.isfile(os.path.join(src, f))]\n",
+    "    random.shuffle(images)\n",
+    "    images = images[num_files:]\n",
+    "    for image in [f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))]:\n",
+    "      if image not in images:\n",
+    "          os.rename(os.path.join(path, image), os.path.join(dst, image))\n",
+    "\n",
     "!cd /workspace/CycleGAN-VAE-NST\n",
     "!rm -r ./datasets/trainA\n",
-    "!cp -r ./trainA_pt_16_128/ ./datasets/trainA\n",
-    "import random\n",
+    "!cp -r ./img_align_celeba_pt/ ./datasets/trainA\n",
+    "## COMMENT OUT THIS BLOCK IF YOU WANT TO KEEP ALL IMAGES\n",
     "path='/workspace/CycleGAN-VAE-NST/datasets/trainA'\n",
-    "if os.path.exists(path):\n",
-    "  images = [f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))]\n",
-    "  random.shuffle(images)\n",
-    "  images = images[9900:]\n",
-    "  for image in [f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))]:\n",
-    "    if image not in images:\n",
-    "        os.remove(os.path.join(path, image))\n",
-    "!rm -r ./datasets/trainB\n",
-    "!cp -r ./trainB_pt_16_128/ ./datasets/trainB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n",
-      "3000\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "import shutil\n",
-    "pathsrc='/workspace/CycleGAN-VAE-NST/trainA_pt_16_128'\n",
-    "pathexst='/workspace/CycleGAN-VAE-NST/datasets/trainA'\n",
     "pathdst='/workspace/CycleGAN-VAE-NST/datasets/testA'\n",
-    "if os.path.exists(pathsrc):\n",
-    "  images = [f for f in os.listdir(pathsrc) if os.path.isfile(os.path.join(pathsrc, f))]\n",
-    "  exstimg= [f for f in os.listdir(pathexst) if os.path.isfile(os.path.join(pathexst, f))]\n",
-    "  print(len(images))\n",
-    "  print(len(exstimg))\n",
-    "  destimg= [f for f in images if f not in exstimg][:500]\n",
-    "  if not os.path.exists(pathdst):\n",
-    "    os.mkdir(pathdst)\n",
-    "  for image in destimg:\n",
-    "    shutil.copy(os.path.join(pathsrc, image), os.path.join(pathdst, image))\n"
+    "trainA_size=18000\n",
+    "move_files(path, pathdst, trainA_size)\n",
+    "\n",
+    "!rm -r ./datasets/trainB\n",
+    "!cp -r ./onepiece_pt/ ./datasets/trainB\n",
+    "path='/workspace/CycleGAN-VAE-NST/datasets/trainB'\n",
+    "pathdst='/workspace/CycleGAN-VAE-NST/datasets/testB'\n",
+    "trainB_size=600\n",
+    "move_files(path, pathdst, trainB_size)"
    ]
   },
   {
@@ -12686,13 +12661,8 @@
    "source": [
     "# Training\n",
     "\n",
-    "-   `python train.py --dataroot ./datasets/horse2zebra --name horse2zebra --model cycle_gan`\n",
     "\n",
-    "Change the `--dataroot` and `--name` to your own dataset's path and model's name. Use `--gpu_ids 0,1,..` to train on multiple GPUs and `--batch_size` to change the batch size. I've found that a batch size of 16 fits onto 4 V100s and can finish training an epoch in ~90s.\n",
-    "\n",
-    "Once your model has trained, copy over the last checkpoint to a format that the testing model can automatically detect:\n",
-    "\n",
-    "Use `cp ./checkpoints/horse2zebra/latest_net_G_A.pth ./checkpoints/horse2zebra/latest_net_G.pth` if you want to transform images from class A to class B and `cp ./checkpoints/horse2zebra/latest_net_G_B.pth ./checkpoints/horse2zebra/latest_net_G.pth` if you want to transform images from class B to class A.\n"
+    "Change the `--dataroot` and `--name` to your own dataset's path and model's name. Use  `--batch_size` to change the batch size."
    ]
   },
   {
@@ -13089,6 +13059,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Once your model has trained, copy over the last checkpoint to a format that the testing model can automatically detect:\n",
+    "\n",
+    "Use `cp ./checkpoints/<MODELNAME>/latest_net_G_A.pth ./checkpoints/<MODELNAME>/latest_net_G.pth` if you want to transform images from class A to class B and `cp ./checkpoints/horse2zebra/latest_net_G_B.pth ./checkpoints/horse2zebra/latest_net_G.pth` if you want to transform images from class B to class A.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "9UkcaFZiyASl"
    },
@@ -13135,7 +13115,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "img = plt.imread('./results/horse2zebra_pretrained/test_latest/images/n02381460_1010_fake.png')\n",
+    "img = plt.imread('./checkpoints/<MODELNAME>/web/images/epoch100_fakeA.jpg')\n",
     "plt.imshow(img)"
    ]
   },
@@ -13149,7 +13129,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "img = plt.imread('./results/horse2zebra_pretrained/test_latest/images/n02381460_1010_real.png')\n",
+    "img = plt.imread('./checkpoints/<MODELNAME>/web/images/epoch100_realA.jpg')\n",
     "plt.imshow(img)"
    ]
   }
