updated with resvae

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -27386,7 +27386,7 @@
    ],
    "source": [
     "os.chdir('/workspace/CycleGAN-VAE-NST/')\n",
-    "    !python train.py --dataroot ./datasets --name portraits2op --lambda_identity 0 --latent_dim 20 --ngf 32 --ndf 32 --norm batch --netG resnet_6blocks --lambda_B 8.0 --dataset_mode tensor --crop_size 128 --batch_size 1 --verbose --n_epochs 20 --n_epochs_decay 10 --display_id -1"
+    "    !python train.py --dataroot ./datasets --name portraits2op --lambda_identity 0.001 --latent_dim 256 --init_type xavier --norm bn --netG RESVAE --dataset_mode tensor --crop_size 128 --batch_size 256 --verbose --n_epochs 100 --n_epochs_decay 100 --display_id -1 --beta1 0.75"
    ]
   },
   {
@@ -27397,6 +27397,32 @@
     "Once your model has trained, copy over the last checkpoint to a format that the testing model can automatically detect:\n",
     "\n",
     "Use `cp ./checkpoints/<MODELNAME>/latest_net_G_A.pth ./checkpoints/<MODELNAME>/latest_net_G.pth` if you want to transform images from class A to class B and `cp ./checkpoints/horse2zebra/latest_net_G_B.pth ./checkpoints/horse2zebra/latest_net_G.pth` if you want to transform images from class B to class A.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### While training\n",
+    "Sometimes, run this to clean previous saved models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "os.chdir('/workspace/CycleGAN-VAE-NST/checkpoints/portraits2op/')\n",
+    "def remove_files_with_regex(directory, pattern):\n",
+    "    for filename in os.listdir(directory):\n",
+    "        if re.match(pattern, filename):\n",
+    "            os.remove(os.path.join(directory, filename))\n",
+    "\n",
+    "pattern = r'[0-9]+\\_net\\_[GD]\\_[AB]\\.pth'\n",
+    "remove_files_with_regex(os.getcwd(), pattern)"
    ]
   },
   {
@@ -27447,7 +27473,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "img = plt.imread('./checkpoints/<MODELNAME>/web/images/epoch100_fakeA.jpg')\n",
+    "img = plt.imread('./checkpoints/portraits2op/web/images/')\n",
     "plt.imshow(img)"
    ]
   },
@@ -27461,7 +27487,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "img = plt.imread('./checkpoints/<MODELNAME>/web/images/epoch100_realA.jpg')\n",
+    "img = plt.imread('./checkpoints/portraits2op/web/images/')\n",
     "plt.imshow(img)"
    ]
   }
