added custom n_layers_G

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -5270,7 +5270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5283,7 +5283,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Copied 1000 random files from ./datasets/onepiece_pt to ./datasets/trainB\n"
+            "Copied 2000 random files from ./datasets/img_align_celeba_pt to ./datasets/trainA\n"
           ]
         }
       ],
@@ -5294,8 +5294,8 @@
         "import random\n",
         "import shutil\n",
         "# Define source and destination directories\n",
-        "source_dir = './datasets/onepiece_pt'\n",
-        "dest_dir = './datasets/trainB'\n",
+        "source_dir = './datasets/img_align_celeba_pt'\n",
+        "dest_dir = './datasets/trainA'\n",
         "\n",
         "# Create the destination directory if it doesn't exist\n",
         "os.makedirs(dest_dir, exist_ok=True)\n",
@@ -5304,7 +5304,7 @@
         "files = os.listdir(source_dir)\n",
         "\n",
         "# Randomly select 2000 files\n",
-        "num_files_to_move = 1000\n",
+        "num_files_to_move = 2000\n",
         "if len(files) < num_files_to_move:\n",
         "    print(f\"Warning: Only {len(files)} files found in {source_dir}. Moving all of them.\")\n",
         "    num_files_to_move = len(files)\n",
