fixed iterate dataset, added other cropping script, added also in Notebook

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -102,7 +102,7 @@
         "Use your own dataset by creating the appropriate folders and adding in the images.\n",
         "\n",
         "-   Create a dataset folder under `/dataset` for your dataset.\n",
-        "-   Create subfolders `testA`, `testB`, `trainA`, and `trainB` under your dataset's folder. For our experiment, we're going to extract the tensors of the images online datasets you can download with:\n",
+        "-   We will create subfolders `testA`, `testB`, `trainA`, and `trainB` under your dataset's folder. For our experiment, we're going to extract the tensors from the images available in online datasets, the <a href=\"https://www.kaggle.com/datasets/jessicali9530/celeba-dataset\">Celeba dataset</a> and the <a href=\"https://www.kaggle.com/datasets/ibrahimserouis99/one-piece-image-classifier\">>Onepiece Dataset</a> you can download with:\n",
         "\n",
         "\\*\\***Notice that you have to change folders before running those**\\*\\*"
       ]
@@ -138,6 +138,26 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "This will download and flatten the datasets, but the Onepiece contains a lot of images showing actions, movements and scenes that must be excluded or cropped. In order to do this we used a simple Computer Vision classic method: Haarcascades, but we also tried a more complex model-based approach. You can check them in [crop_onepiece.py](./data/custom_dataset_nst/crop_onepiece.py) and [crop_onepiece2.py](./data/custom_dataset_nst/crop_onepiece2.py)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "shellscript"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "%python ./data/custom_dataset_nst/crop_onepiece.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Now you can convert the images folders to tensors using this script, that will use the default DataLoader with some additional options to store the tensors in new folders that end with '_pt'. It will also do a full resize to a squared <LOAD_SIZE> and crop to <CROP>\n",
         "\n",
         "\\*\\***Also here you will have to change directories and understand the command usage**\\*\\*\n",
@@ -155,7 +175,7 @@
       },
       "outputs": [],
       "source": [
-        "%python ./data/iterate_dataset.py --transform_float16 --preprocess resize_and_crop --dataroot ./datasets --gpu_ids <GPU_ID> --load_size <LOAD_SIZE> --crop_size <CROP>"
+        "%python ./iterate_dataset.py --transform_float16 --preprocess resize_and_crop --dataroot ./datasets --gpu_ids <GPU_ID> --load_size <LOAD_SIZE> --crop_size <CROP>"
       ]
     },
     {
