cleanup of unnecessary scripts

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -15,7 +15,7 @@
         "id": "7wNjDKdQy35h"
       },
       "source": [
-        "# Install"
+        "# Installation"
       ]
     },
     {
@@ -104,7 +104,7 @@
         "-   Create a dataset folder under `/dataset` for your dataset.\n",
         "-   We will create subfolders `testA`, `testB`, `trainA`, and `trainB` under your dataset's folder. For our experiment, we're going to extract the tensors from the images available in online datasets, the <a href=\"https://www.kaggle.com/datasets/jessicali9530/celeba-dataset\">Celeba dataset</a> and the <a href=\"https://www.kaggle.com/datasets/ibrahimserouis99/one-piece-image-classifier\">>Onepiece Dataset</a> you can download with:\n",
         "\n",
-        "\\*\\***Notice that you have to change folders before running those**\\*\\*"
+        "\\*\\***Notice that you have to change folders before running those scripts**\\*\\*"
       ]
     },
     {
@@ -120,15 +120,7 @@
           "languageId": "shellscript"
         }
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%python ./data/custom_dataset_nst/prepare_celeba.py\n",
         "%python ./data/custom_dataset_nst/prepare_onepiece.py"
@@ -138,7 +130,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This will download and flatten the datasets, but the Onepiece contains a lot of images showing actions, movements and scenes that must be excluded or cropped. In order to do this we used a simple Computer Vision classic method: Haarcascades, but we also tried a more complex model-based approach. You can check them in [crop_onepiece.py](./data/custom_dataset_nst/crop_onepiece.py) and [crop_onepiece2.py](./data/custom_dataset_nst/crop_onepiece2.py)"
+        "This will download and flatten the datasets, but the Onepiece contains a lot of images showing actions, movements and scenes that must be excluded or cropped. In order to do this we used a simple Computer Vision classic method, the *Haarcascades*, but we also reference a more complex approach, based on a pretrained Face Recognition DL model. You can check them in [crop_onepiece.py](./data/custom_dataset_nst/crop_onepiece.py) and [crop_onepiece_deep_.py](./data/custom_dataset_nst/crop_onepiece_deep.py)"
       ]
     },
     {
@@ -158,11 +150,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now you can convert the images folders to tensors using this script, that will use the default DataLoader with some additional options to store the tensors in new folders that end with '_pt'. It will also do a full resize to a squared <LOAD_SIZE> and crop to <CROP>\n",
+        "Now you can convert the images to tensors using this script, that will use the default DataLoader with some additional features to convert and store images in the folders you will specify inside tensors in new folders that will be renamed adding '_pt' at the end.\n",
         "\n",
-        "\\*\\***Also here you will have to change directories and understand the command usage**\\*\\*\n",
+        "It will also resize the image to a squared \\<LOAD_SIZE\\>px and crop to \\<CROP\\>px.\n",
         "\n",
-        "Change gpu_ids to 0 if you want to run it on GPU."
+        "\\*\\***Also here you will have to change directories and check the command usage**\\*\\*\n",
+        "\n",
+        "Change gpu_ids value if you want to run it on GPU."
       ]
     },
     {
@@ -335,10 +329,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "So now it's time to train the model. In order to set up the correct parameters, please take a closer look at the <a href=\"https://github.com/davexhardware/CycleGAN-VAE-NST/tree/master/options\">options files</a> and to the <a href=\"https://github.com/davexhardware/CycleGAN-VAE-NST/tree/master/docs\"> documentation</a> e.g. tips.\n",
+        "So now it's time to train the model. In order to set up the correct parameters, please take a closer look at the [options](./options/base_options.py) files and to the [tips](./docs/tips.md)\n",
         "\n",
         "If you have a GUI and/or an access to the ports of the machine you are training on, you may enjoy looking at some training loss curves and intermediate results on the visdom-provided dashboard. \n",
-        "\n",
         "First, remove  `--display_id -1`  from the next command, and when you start it the script will connect automatically, if  `python -m visdom.server` is running."
       ]
     },
