fixes for testing

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -355,20 +355,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "gwutVU2rJhRz"
-      },
-      "source": [
-        "\n",
-        "Once your model has trained, copy over the last checkpoint to a format that the testing model can automatically detect:\n",
-        "\n",
-        "Use:\n",
-        "- `cp ./checkpoints/<MODELNAME>/latest_net_G_A.pth ./checkpoints/<MODELNAME>/latest_net_G.pth` if you want to transform images from class A to class B \n",
-        "- or`cp ./checkpoints/<MODELNAME>/latest_net_G_B.pth ./checkpoints/<MODELNAME>/latest_net_G.pth` if you want to transform images from class B to class A.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### Visualize\n",
@@ -456,6 +442,13 @@
       "source": [
         "# Testing\n",
         "\n",
+        "Once your model has trained, copy over the last checkpoint to a format that the testing model can automatically detect:\n",
+        "\n",
+        "Use:\n",
+        "- `cp ./checkpoints/<MODELNAME>/latest_net_G_A.pth ./checkpoints/<MODELNAME>/latest_net_G.pth` if you want to transform images from class A to class B \n",
+        "- or`cp ./checkpoints/<MODELNAME>/latest_net_G_B.pth ./checkpoints/<MODELNAME>/latest_net_G.pth` if you want to transform images from class B to class A.\n",
+        "\n",
+        "In case you want to test models at different epochs, create a new *cp_test* folder and one subfolder for each training epoch you want to test, e.g. `cp ./checkpoints/real2onepiece_portraits_pt/250_net_G_A.pth ./cp_test/real2op250/latest_net_G.pth`\n",
         "Testing here is done using images, so you'll have to load them in the testA folder.\n",
         "If you want to pick a defined number of images from the train starting folder to the test one, run this script:"
       ]
