TODO: add pictures to Readme

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -492,7 +492,7 @@
         "> from https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix:\n",
         "> The option --model test is used for generating results of CycleGAN only for one side. This option will automatically set --dataset_mode single, which only loads the images from one set. On the contrary, using --model cycle_gan requires loading and generating results in both directions, which is sometimes unnecessary. The results will be saved at ./results/. Use --results_dir {directory_path_to_save_result} to specify the results directory.\n",
         "\n",
-        "> For your own experiments, you might want to specify --netG, --norm, --no_dropout to match the generator architecture of the trained model."
+        "**For your own experiments, you might want to specify --netG, --norm, --no_dropout to match the generator architecture of the trained model.**"
       ]
     },
     {
