CycleGAN.ipynb improvs

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -473,13 +473,12 @@
     "    if not os.path.exists(test_dir):\n",
     "        os.mkdir(test_dir)\n",
     "    for image in images_to_move:\n",
-    "        if '_fake' in image:\n",
-    "            shutil.copy(os.path.join(img_dir, image), os.path.join(test_dir, image.replace('_fake','')))\n",
+    "        shutil.copy(os.path.join(img_dir, image), os.path.join(test_dir, image))\n",
     "  else:\n",
     "    print(f\"Directory {img_dir} does not exist\")\n",
     "\n",
-    "path= './results/inverse_results/real2op200_reference_idt_full_B_to_A/test_latest/images'\n",
-    "pathdst = './datasets/test_fakeportr2op/testA'\n",
+    "path= './path/to/souce/images'\n",
+    "pathdst = './path/to/test/images'\n",
     "test_size = 100\n",
     "move_to_test(path, pathdst, test_size)"
    ],
@@ -518,7 +517,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "!python test.py --dataroot ./datasets/test_real2op --checkpoints_dir ./cp_test --name real2op200_reference_idt_full_B_to_A --crop_size 128 --load_size 140 --netG resnet_9blocks --no_dropout --norm batch"
+   "source": "!python test.py --dataroot ./datasets/test_real2op --checkpoints_dir ./cp_export/datasetv2_experiments --name resnet6_vae_epoch200_datasetv2 --crop_size 128 --load_size 140 --netG ResnetKVAE --n_layers_G 6 --no_dropout --norm batch"
   }
  ],
  "metadata": {
